--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "files": ["dist"],
   "exports": {
     ".": {
-      "import": "./dist/main.js"
+      "import": "./dist/index.js"
     },
     "./environment": {
       "import": "./dist/environment.js"
