--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "js_utils-summary",
   "homepage": "https://github.com/pnoulis/js_utils#readme",
   "bugs": "https://github.com/pnoulis/js_utils/issues",
-  "keywords": ["js_utils-keywords"],
+  "keywords": [
+    "js_utils-keywords"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/pnoulis/js_utils.git"
@@ -14,7 +16,9 @@
     "build": "make build",
     "test": "make test"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": "./dist/index.js",
     "./pipeline": "./dist/pipeline/Pipeline.js",
@@ -39,10 +43,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
-    "prettier": "^2.8.7",
-    "vite": "^4.2.1",
-    "vite-plugin-node": "^3.0.2",
-    "vitest": "^0.30.0"
+    "prettier": "^2.8.7"
   },
   "dependencies": {
     "uuid": "^9.0.0"
