Reverted back package.json files

--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "scripts": {
     "dev": "make run",
     "build": "make build",
-    "test": "make test",
-    "prepack": "MODE=production make build"
+    "test": "make test"
   },
-  "files": ["dist", "README.md", "PACKAGE", "package.json"],
+  "files": ["dist"],
   "exports": {
     ".": "./dist/index.js",
     "./pipeline": "./dist/pipeline/Pipeline.js",
