--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "dev": "make run",
     "build": "make build",
-    "test": "make test",
-    "prepack": "MODE=production make build"
+    "test": "make test"
   },
   "files": ["dist", "README.md", "PACKAGE", "package.json"],
   "exports": {
