--- a/package.json
+++ b/package.json
@@ -15,12 +15,26 @@
   },
   "files": ["dist"],
   "exports": {
-    ".": "./dist/index.js",
-    "./pipeline": "./dist/pipeline/Pipeline.js",
-    "./task_runners": "./dist/task_runners/index.js",
-    "./*": "./dist/*.js",
-    "./node": "./dist/node/index.js",
-    "./node/*": "./dist/node/*.js",
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./pipeline": {
+      "import": "./dist/pipeline/Pipeline.js",
+      "require": "./dist/pipeline/Pipeline.cjs"
+    },
+    "./task_runners": {
+      "import": "./dist/task_runners/index.js",
+      "require": "./dist/task_runners/index.cjs"
+    },
+    "./*": {
+      "import": "./dist/*.js",
+      "require": "./dist/*.cjs"
+    },
+    "./node": {
+      "import": "./dist/node/index.js",
+      "require": "./dist/node/index.cjs"
+    },
     "./browser": "./dist/browser/index.js",
     "./browser/*": "./dist/browser/*.js"
   },
